--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe mollitia, eligendi illum debitis cum incidunt in iste ipsa vitae sapiente quaerat veniam repellendus vel nihil a nam voluptate dolorem perspiciatis.</p>
+                    <p>My Name is V Mahendra Reddy and Iam from Kurnool Currently staying in hydrabad. I recently graduation in B.Tech from  RK COLLAGE OF ENGINEERING,VIJAYAWADA in the feild of Artifical intelligence.
+                        comming to my projects i done library management system and event ticket booking system and acadamic project on expert system for insulin dosage prediction .coming to myfamily background my father is a farmer and my mother is a home maker and i have an younger sister she is completed degree. and comming to my strength iam an quicklearner ,and positiveness.
+                        this is all about me.
+                    </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -47,7 +50,7 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>HTML ,CSS, JS</span><br>Design a content of web page </li>
-                            <li><span>Python</span><br>Backend PUrpose </li>
+                            <li><span>Python</span><br>Backend Purpose  and <span>Django</span><br>Web framework</li>
                             <li><span>SQL</span><br>Database language </li>
                         </ul>
                     </div>
@@ -81,14 +84,24 @@
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Libary management system</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque odio debitis, beatae eius placeat, quisquam ipsam provident, totam possimus facere fugiat? Voluptates eveniet dolorem architecto suscipit facilis dolor aspernatur maxime?</p>
+                <h3>To develop a user-friendly Library Management System using python and SQLite that enables efficient 
+handling of library operations such as user authentication, book management, issuing and returning of 
+books, and maintaining transaction records.</h3>
                 <a href="#">Learn more</a>
             </div>
 
             <div>
                 <i class="fa-solid fa-ticket"></i>
                 <h2>Event Ticket Booking System</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque odio debitis, beatae eius placeat, quisquam ipsam provident, totam possimus facere fugiat? Voluptates eveniet dolorem architecto suscipit facilis dolor aspernatur maxime?</p>
+                <p>Event Ticket Booking is a ticket booking CLI based platform built using Python and SQLite.
+It provides CLI for:
+Managing events (by admins)
+Allowing authenticated users to book and manage the ticket
+Features :-
+Simple Authentication (Login & Registration)
+Event Management (Admin)
+Ticket Booking for Authenticated User
+Database integration to store the data in real-time</p>
                 <a href="#">Learn more</a>
             </div>
 
@@ -97,7 +110,14 @@
                 <h2>Acadamic Project</h2>
                 <h2>An expert system for insulin dosage preduction</h2>
                 
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque odio debitis, beatae eius placeat, quisquam ipsam provident, totam possimus facere fugiat? Voluptates eveniet dolorem architecto suscipit facilis dolor aspernatur maxime?</p>
+                <p>• Developed an expert system using rule-based logic and deep learning to predict personalized insulin 
+dosage for diabetic patient based on parameters like blood glucose levels, weight and physical activity.
+• Designed and implemented a knowledge base in python using clinical guidelines and inputs from PIMA
+Indian diabetes dataset.
+Key points:
+Role: Team Leader
+Tools and Tech: Python, Excel sheets 
+Outcome: 82% Accuracy</p>
                 <a href="#">Learn more</a>
             </div>
         </div>
@@ -155,16 +175,16 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane"></i>contact@gmail.com</p>
-                <p><i class="fa-solid fa-phone"></i>0123456789</p>
+                <p><i class="fa-solid fa-paper-plane"></i>mahendrareddyvagaruru@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>6300299020</p>
                 <div class="social-icons">
-                    <a href="#" aria-label="View project">
+                    <a href="mahendrareddyvagaruru@gmail.com" aria-label="View project">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
                     <a href="#" aria-label="View project">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#" aria-label="View project">
+                    <a href="www.linkedin.com/in/mahendrareddy-v360b44261" aria-label="View project">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                     <a href="#" aria-label="View project">
