added project content

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Python fullstack develper</p>
-                <h1>Hi, I'm Mahendra Reddy.V<br> <span>write something</span></h1>
+                <p>Python Fullstack Developer</p>
+                <h1>Hi, I'm V.Mahendra Reddy<br> <span>Passionate about turning ideas into code and code into impactful solutions</span></h1>
             </div>
           </div>
     </div>
@@ -38,8 +38,8 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>My Name is V Mahendra Reddy and Iam from Kurnool Currently staying in hydrabad. I recently graduation in B.Tech from  RK COLLAGE OF ENGINEERING,VIJAYAWADA in the feild of Artifical intelligence.
-                        comming to my projects i done library management system and event ticket booking system and acadamic project on expert system for insulin dosage prediction .coming to myfamily background my father is a farmer and my mother is a home maker and i have an younger sister she is completed degree. and comming to my strength iam an quicklearner ,and positiveness.
+                    <p>My Name is V Mahendra Reddy and Iam from Kurnool Currently staying in Hyderabad. I recently graduation in B.Tech from  RK COLLAGE OF ENGINEERING,VIJAYAWADA in the field of Artifical Intelligence And Machine Learning.
+                        comming to my projects, I done library management system , Event ticket booking system and acadamic project on expert system for insulin dosage prediction .comming to my strength iam an quicklearner ,and positiveness.
                         this is all about me.
                     </p>
                     <div class="tab-titles">
@@ -50,24 +50,27 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>HTML ,CSS, JS</span><br>Design a content of web page </li>
-                            <li><span>Python</span><br>Backend Purpose  and <span>Django</span><br>Web framework</li>
+                            <li><span>Reactjs</span><br>Frontend Library</li>
+                            <li><span>Python</span><br>Backend Purpose</li> 
+                            <li><span>Django</span><br>Web framework</li>
                             <li><span>SQL</span><br>Database language </li>
+                            <li><span>MySql,SQLite</span><br>Databases</li>
                         </ul>
                     </div>
 
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2025  - current </span><br>Be a intern at Qspiders Institute</li>
-                            <li><span>2024 - 2024 </span><br>Vlxit sol</li>
-                            <li><span>python fill stack dev</span><br>in vxlit sul </li>
+                            <li><span>2025  - current </span><br>Be a internship at Qspiders Institute,Dilsukhnagar,Hyderabad</li>
+                            <li><span>web dev. shorterm internship</span><br>Vxlit solution</li>
+                            <li><span>python fill stack dev.shorterm internship</span><br>in vxlit solution</li>
                         </ul>
                     </div>
 
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2025</span><br>B.Tech from RKCE  vijayawada </li>
-                            <li><span>Intermediate</span><br>Narayana Adoni</li>
-                            <li><span>Secondary School</span><br>Milton High School Adoni</li>
+                            <li><span>B.Tech</span><br>RK College Of Engineering,Vijayawada </li>
+                            <li><span>Intermediate</span><br>Narayana Junior College,Adoni</li>
+                            <li><span>Secondary School</span><br>Milton High School ,Adoni</li>
                         </ul>
                     </div>
                 </div>
@@ -84,24 +87,14 @@
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Libary management system</h2>
-                <h3>To develop a user-friendly Library Management System using python and SQLite that enables efficient 
-handling of library operations such as user authentication, book management, issuing and returning of 
-books, and maintaining transaction records.</h3>
+                <h3>To develop a user-friendly Library Management System using python and SQLite </h3>
                 <a href="#">Learn more</a>
             </div>
 
             <div>
                 <i class="fa-solid fa-ticket"></i>
                 <h2>Event Ticket Booking System</h2>
-                <p>Event Ticket Booking is a ticket booking CLI based platform built using Python and SQLite.
-It provides CLI for:
-Managing events (by admins)
-Allowing authenticated users to book and manage the ticket
-Features :-
-Simple Authentication (Login & Registration)
-Event Management (Admin)
-Ticket Booking for Authenticated User
-Database integration to store the data in real-time</p>
+                <h3>Event Ticket Booking is a ticket booking CLI based platform built using Python and SQLite.</h3>
                 <a href="#">Learn more</a>
             </div>
 
@@ -109,15 +102,6 @@ Database integration to store the data in real-time</p>
                 <i class="fa-solid fa-laptop-medical"></i>
                 <h2>Acadamic Project</h2>
                 <h2>An expert system for insulin dosage preduction</h2>
-                
-                <p>• Developed an expert system using rule-based logic and deep learning to predict personalized insulin 
-dosage for diabetic patient based on parameters like blood glucose levels, weight and physical activity.
-• Designed and implemented a knowledge base in python using clinical guidelines and inputs from PIMA
-Indian diabetes dataset.
-Key points:
-Role: Team Leader
-Tools and Tech: Python, Excel sheets 
-Outcome: 82% Accuracy</p>
                 <a href="#">Learn more</a>
             </div>
         </div>
