added all the required links

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                             <li><span>Django</span><br>Web framework</li>
                             <li><span>SQL</span><br>Database language </li>
                             <li><span>MySql,SQLite</span><br>Databases</li>
+                            <li><span>Git,Github,MS Word,Excel,PowerPoint,VS Code,Pycham</span>Tools</li>
                         </ul>
                     </div>
 
@@ -162,16 +163,16 @@
                 <p><i class="fa-solid fa-paper-plane"></i>mahendrareddyvagaruru@gmail.com</p>
                 <p><i class="fa-solid fa-phone"></i>6300299020</p>
                 <div class="social-icons">
-                    <a href="mahendrareddyvagaruru@gmail.com" aria-label="View project">
+                    <a href="https://www.facebook.com/mahendrareddy.vagaruru" aria-label="View project">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="#" aria-label="View project">
+                    <a href="https://www.instagram.com/reddy_bangaram_63" aria-label="View project">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="www.linkedin.com/in/mahendrareddy-v360b44261" aria-label="View project">
+                    <a href="https://www.linkedin.com/in/mahendrareddy-v360b44261" aria-label="View project">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                    <a href="#" aria-label="View project">
+                    <a href="https://github.com/vmahireddy" aria-label="View project">
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
