add missing content

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <li><span>Django</span><br>Web framework</li>
                             <li><span>SQL</span><br>Database language </li>
                             <li><span>MySql,SQLite</span><br>Databases</li>
-                            <li><span>Git,Github,MS Word,Excel,PowerPoint,VS Code,Pycham</span>Tools</li>
+                            <li><span>Git,Github,MS Word,Excel,PowerPoint,VS Code,Pycham</span><br>Tools</li>
                         </ul>
                     </div>
 
