--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <ul>
                             <li><span>2025  - current </span><br>Be a internship at Qspiders Institute,Dilsukhnagar,Hyderabad</li>
                             <li><span>web dev. shorterm internship</span><br>Vxlit solution</li>
-                            <li><span>python fill stack dev.shorterm internship</span><br>in vxlit solution</li>
+                            <li><span>python full stack dev.shorterm internship</span><br>Vxlit solution</li>
                         </ul>
                     </div>
 
@@ -89,21 +89,28 @@
                 <i class="fa-solid fa-code"></i>
                 <h2>Libary management system</h2>
                 <h3>To develop a user-friendly Library Management System using python and SQLite </h3>
-                <a href="#">Learn more</a>
+                <a href="https://github.com/vmahireddy/Library-Management-System"><button>Learn more</button></a>
             </div>
 
             <div>
                 <i class="fa-solid fa-ticket"></i>
                 <h2>Event Ticket Booking System</h2>
                 <h3>Event Ticket Booking is a ticket booking CLI based platform built using Python and SQLite.</h3>
-                <a href="#">Learn more</a>
+                <a href="https://github.com/vmahireddy/event-ticket-booking-system"><button>Learn more</button></a>
             </div>
 
-            <div>
+             <div>
                 <i class="fa-solid fa-laptop-medical"></i>
                 <h2>Acadamic Project</h2>
                 <h2>An expert system for insulin dosage preduction</h2>
-                <a href="#">Learn more</a>
+                <a href="#"><button>Learn more</button></a>
+            </div>
+
+            <div>
+                <i class="fa-solid fa-address-card"></i>
+                <h2>Portfolio</h2>
+                <h3>A Portfolio with My Quick Introduction, Contactform, Projects  and  their links </h3>
+                <a href="#"><button>Learn more</button></a>
             </div>
         </div>
     </div>
