--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
-                <a href="./images/My Resume.pdf" download class="btn btn2">Download Resume</a>
+                <a href="./images/Mahendra_Portfolio.pdf" download class="btn btn2">Download Resume</a>
             </div>
 
             <div class="contact-right">
